fix emulator: overflow wrap text

--- a/src/bp/ui-studio/src/web/components/ChatEmulator/Message.styl
+++ b/src/bp/ui-studio/src/web/components/ChatEmulator/Message.styl
@@ -61,9 +61,7 @@
 
   .message {
     max-height: 50px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+    overflow-wrap: break-word;
 
     &.typing {
       color: var(--c-neutral);
